node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdemo
  labels:
    app: webdemo
spec:
  selector:
    app: webdemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: http
