example-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nodeapp.info
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: webdemo
                port:
                  number: 8081
